# Proyecto3_CG

./: 2.1.point.vs  CMakeLists.txt  README.md  Triangle.h  main.cpp
